# walt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  install.sh  next-steps.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  discussion.yml  feature_request.yml
packaging/aur/: README.md
packaging/aur/walt/: .SRCINFO  PKGBUILD
packaging/aur/walt-git/: .SRCINFO  PKGBUILD
src/: config.rs  logging.rs  main.rs  shared.rs  theme.rs
src/backend/: hyprpaper.rs  mod.rs  random.rs  rotation.rs  scanner.rs  uninstall.rs
src/cache/: index.rs  mod.rs  thumbnail.rs
src/gui/: app.rs  mod.rs  preview.rs  style.rs
src/ui/: mod.rs  theme.rs
