[package]
name = "walt"
version = "0.6.0"
edition = "2021"
description = "Terminal wallpaper picker for Hyprland with randomization and rotation support"
license = "MIT"
repository = "https://github.com/gitfudge0/walt"
homepage = "https://github.com/gitfudge0/walt"
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = { version = "5.0", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }
dirs = "5.0"
walkdir = "2.5"
anyhow = "1.0"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = true
