[package]
name = "walt"
version = "0.8.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = { version = "5.0", features = ["crossterm"] }
eframe = { version = "0.33.3", default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
  "x11",
] }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }
dirs = "5.0"
walkdir = "2.5"
anyhow = "1.0"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"

[profile.release]
opt-level = 3
lto = true
